Update to latest Jekyll and Jekyll-Assets.

--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -7,6 +7,6 @@
         {{ content }}
         {% include footer.html %}
     </div>
-    {% js main %}
+    {% asset main.js %}
   </body>
 </html>
