--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,5 @@
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  {% css main %}
+  {% asset main.css %}
 </head>
